tests/test2/fail/fail-matrixBinop4.m2
int main(){
	String a;
	a = "hello";
	matrix int [3][2] m;
  	m = [[2,9];
        [0,2];
        [1,1]];
    
    a + m;

    return 0;
}